- added an array sanitize function and implemented it wherever there is GET data.
- added an array sanitize function and implemented it where POST data is extracted as an array.
- EXTR_SKIP has been added to the extract global as an extra security measure.
- libxml_disable_entity_loader set to true in the xml variable to prevent xml entity expansion attacks. 
- added a hidden field in registration to prevent spam registration.
Additional changes
- added the top ten mod created by renderse7en from the DK mods forums because he created this engine and also wrote the mod.
- added an extra folder with mods and instructions for installing the mods.  Included mods have been updated to mysqli with security added, and tested to work with 1.1.12

### 1.1.11 (3.26.2006) ###
### Thanks to r0xes & Adam. :)
- Added recursive htmlspecialchars to the rest of the superglobal security in lib.php.
- Fixed a bug that allowed blank passwords.
- Updated copyright dates as necessary.

### 1.1.10b (10.25.2005) ###
- Fixed addslashes_deep() to actually add slashes, instead of strip them. Man, I'm dumb.

### 1.1.10a (10.1.2005) ###
### Thanks to obliv. :)
- Fixed a security error.

### 1.1.10 (3.13.2005) ###
### Thanks to Gary13579. :)
- Fixed a security error.
- Added verified/banned checking in the built-in forum.

### 1.1.9 (3.2.2005) ###
### Thanks to xudzh and ChAoS and Adam. :)
- Character names now have validation checking.
- Fixed babblebox bug when used in Internet Exploder.
- Updated the admin menu link to the main game page for the new path.
- Updated the link to the official DK forums in the Help file.

### 1.1.8 (2.6.2005) ###
- Added extra security to prevent SQL injection exploits.
- admin.php is now in the game root directory rather than the /admin/ sub.

### 1.1.7 (12.29.2004) ###
### Thanks to Adam. :)
- Fixed URL cheat that allowed people to continue fighting after victory.

### 1.1.6a (11.20.2004) ###