@@ -18,7 +18,7 @@ that was emailed to you to unlock your character.</td></tr>
 <tr><td width="20%">Username:</td><td><input type="text" name="username" size="30" maxlength="30" /></td></tr>
 <tr><td>Email Address:</td><td><input type="text" name="email" size="30" maxlength="100" /></td></tr>
 <tr><td>Verification Code:</td><td><input type="text" name="verify" size="10" maxlength="8" /><br /><br /><br /></td></tr>
-<tr><td colspan="2"><input type="hidden" name="birthday" value=""><input type="submit" name="submit" value="Submit" onclick="return confirm('Confirm action');" /> <input type="reset" name="reset" value="Reset" /></td></tr>
+<tr><td colspan="2"><input type="hidden" name="birthday" value=""><input type="submit" name="submit" value="Submit" /> <input type="reset" name="reset" value="Reset" /></td></tr>
 <tr><td><input type="hidden" name="token" value="{$token}" />   </td></tr>
 </table>
 </form>
